test/Fail/MissingBodyInLet.agda
-- Andreas, 2024-08-28

f = let x = Set

-- Expected error:
-- Missing body in let-expression
