test/Fail/MissingBodyInLet.err
MissingBodyInLet.agda:3.5-16: error: [NotAValidLetExpression.MissingBody]
Missing body in let-expression
when scope checking let x = Set
